# ModularPortal

./: .gitignore  README.md  VariousSynths.sf2  main.py  midi_to_wave.py  midi_to_wave_suyee.py  parquet_to_midi.py  pyproject.toml  spikes_sonified.mid
