[project]
name = "pretty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "polars>=1.34.0",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.3.4",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = []
