[project]
name = "pretty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pretty-midi>=0.2.11",
    "pyarrow>=22.0.0",
    "pyfluidsynth>=1.3.4",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = []
